--- a/static/index.css
+++ b/static/index.css
@@ -5,6 +5,10 @@
 #container{
     width:100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #container #participant #column{
