--- a/static/index.css
+++ b/static/index.css
@@ -7,8 +7,19 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
+    margin:30px
+}
+
+#container #add-participant-container{
+    margin-top: 25vh;
+    display: flex;
+    flex-direction: column;
+    width:30%
+}
+
+#container #participant-list{
+    margin-top: 10vh;
 }
 
 #container #participant #column{
@@ -23,4 +34,14 @@
 
 #container #participant{
     margin-bottom: 20px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+button{
+    width:100%
 }
